--- a/etc/launchd/daemons/Makefile.am
+++ b/etc/launchd/daemons/Makefile.am
@@ -7,6 +7,7 @@ launchddaemon_DATA = \
 	$(top_srcdir)/etc/launchd/daemons/org.openzfsonosx.zed.plist \
 	$(top_srcdir)/etc/launchd/daemons/org.openzfsonosx.zpool-import.plist \
 	$(top_srcdir)/etc/launchd/daemons/org.openzfsonosx.zpool-import-all.plist \
+	$(top_srcdir)/etc/launchd/daemons/org.openzfsonosx.zfs-pool-importer.plist \
 	$(top_srcdir)/etc/launchd/daemons/org.openzfsonosx.InvariantDisks.plist
 
 DAEMON_DIR = $(top_srcdir)/etc/launchd/daemons
@@ -17,12 +18,14 @@ EXTRA_DIST = \
 	$(DAEMON_DIR)/org.openzfsonosx.zed.plist.in \
 	$(DAEMON_DIR)/org.openzfsonosx.zpool-import.plist.in \
 	$(DAEMON_DIR)/org.openzfsonosx.zpool-import-all.plist.in \
+	$(DAEMON_DIR)/org.openzfsonosx.zfs-pool-importer.plist.in \
 	$(DAEMON_DIR)/org.openzfsonosx.InvariantDisks.plist.in
 
 $(DAEMON_DIR)/org.openzfsonosx.zconfigd.plist: $(DAEMON_DIR)/org.openzfsonosx.zconfigd.plist.in
 $(DAEMON_DIR)/org.openzfsonosx.zed.plist: $(DAEMON_DIR)/org.openzfsonosx.zed.plist.in
 $(DAEMON_DIR)/org.openzfsonosx.zpool-import.plist: $(DAEMON_DIR)/org.openzfsonosx.zpool-import.plist.in
 $(DAEMON_DIR)/org.openzfsonosx.zpool-import-all.plist: $(DAEMON_DIR)/org.openzfsonosx.zpool-import-all.plist.in
+$(DAEMON_DIR)/org.openzfsonosx.zfs-pool-importer.plist: $(DAEMON_DIR)/org.openzfsonosx.zfs-pool-importer.plist.in
 $(DAEMON_DIR)/org.openzfsonosx.InvariantDisks.plist: $(DAEMON_DIR)/org.openzfsonosx.InvariantDisks.plist.in
 
 $(launchddaemon_DATA):
@@ -30,6 +33,7 @@ $(launchddaemon_DATA):
 		-e 's,@runstatedir\@,$(runstatedir),g' \
 		-e 's,@sbindir\@,$(sbindir),g' \
 		-e 's,@sysconfdir\@,$(sysconfdir),g' \
+		-e 's,@libexecdir\@,$(libexecdir),g' \
 		-e 's,@launchddaemondir\@,$(launchddaemondir),g' \
 		-e 's,@launchdscriptdir\@,$(launchdscriptdir),g' \
 		'$@.in' >'$@'
